@@ -42,11 +42,6 @@ public class PatternSequenceEngine extends AbstractMultiPatternSequenceEngine {
         }
 
         try {
-            setNormalizeChords(!XMLUtils.parseBoolean(random, "obeyChordSubtype", node));
-            logger.warn("The tag \"obeyChordSubtype\" has been deprecated. " + "Use \"normalizeChords\" with inverted value instead.");
-        } catch (Exception e) {}
-
-        try {
             setNormalizeChords(XMLUtils.parseBoolean(random, "normalizeChords", node));
         } catch (Exception e) {}
 
